support generate swagger body with successExample

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apidoc-core": "^0.12.0",
     "commander": "^6.0.0",
+    "generate-schema": "^2.6.0",
     "lodash": "^4.17.20",
     "path-to-regexp": "^6.1.0",
     "winston": "^3.3.3"
