--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "apidoc-swagger-3.0",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "apidoc-core": "^0.12.0",
-    "commander": "^6.0.0",
-    "generate-schema": "^2.6.0",
-    "lodash": "^4.17.20",
-    "path-to-regexp": "^6.1.0",
-    "winston": "^3.3.3"
-  }
+    "name": "apidoc-swagger-3.0",
+    "version": "0.0.0",
+    "description": "",
+    "main": "bin.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "apidoc-core": "^0.12.0",
+        "commander": "^6.0.0",
+        "generate-schema": "^2.6.0",
+        "lodash": "^4.17.20",
+        "path-to-regexp": "^6.1.0",
+        "winston": "^3.3.3"
+    }
 }
