support read data from ts file  in plugin-replace-mark

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "lodash": "^4.17.20",
         "path-to-regexp": "^6.1.0",
         "winston": "^3.3.3"
+    },
+    "peerDependencies": {
+        "typescript": "^3.8.7"
     }
 }
