--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "swagger-3.0"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "license": "ISC",
     "dependencies": {
@@ -34,5 +34,8 @@
     },
     "peerDependencies": {
         "typescript": "^3.8.7"
+    },
+    "devDependencies": {
+        "jest": "^27.5.1"
     }
 }
