--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "license": "ISC",
     "dependencies": {
-        "apidoc-core": "^0.12.0",
+        "apidoc": "^0.50.5",
         "commander": "^6.0.0",
         "generate-schema": "^2.6.0",
         "lodash": "^4.17.20",
